# pingcap-talentplan

bb01/: .env  Cargo.toml
bb02/: test.bson  test.json  test.ron
bb02/src/: main.rs
kvs/: Cargo.toml
kvs/scripts/: livedocs.sh
pna/bb01/src/: main.rs
pna/bb02/: Cargo.toml
pna/bb02/src/: main.rs
pna/bb03/: Cargo.toml
pna/bb03/src/: lib.rs
pna/bb03/tests/: tests.rs
pna/bb04/: Cargo.toml
pna/bb04/src/: lib.rs  main.rs
pna/kvs/: .gitignore  Cargo.toml  README.md  build.rs
pna/kvs/benches/: benches.rs  common.rs  concurrent.rs  sequential.rs
pna/kvs/src/: engines.rs  error.rs  lib.rs  network.proto  network.rs  networking.rs
pna/kvs/src/engines/: kvs.rs  mod.rs  sled.rs
pna/kvs/src/networking/: json.rs  mod.rs
pna/kvs/src/proto/: client.rs  messages.proto  mod.rs  server.rs
pna/kvs/src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
pna/kvs/tests/: cli.rs
pna/serde-resp/: Cargo.toml
pna/serde-resp/src/: de.rs  error.rs  lib.rs  ser.rs
redis-ping/: Cargo.toml
