# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bb01"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
