[package]
name = "kvs"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
