[package]
name = "kvs"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
prost = "0.7"
bytes = "1.0.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"

[build-dependencies]
prost-build = "0.7.0"
