[package]
name = "kvs"
version = "0.1.0"
authors = ["Vo Le Tung <15053897+letung3105@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytes = "1.0.1"
dashmap = "4.0.2"
rayon = "1.5.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
slog = "2.7.0"
slog-term = "2.8.0"
slog-async = "2.6.0"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.3.4"
crossbeam-utils = "0.6.5"
num_cpus = "1.13.0"
panic-control = "0.1.4"
predicates = "1.0.0"
rand = "0.8.3"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "sequential"
harness = false

[[bench]]
name = "concurrent"
harness = false
